# seekur_jr_robot

./: README.md
moveit_api_test/src/: moveit_api_test.cpp
seekur_jr_control/: CMakeLists.txt  package.xml
seekur_jr_control/config/: seekur_jr_control.yaml
seekur_jr_description/: CMakeLists.txt  package.xml
seekur_jr_description/launch/: display.launch  display.launch~  display_original.launch  state_publisher.launch
seekur_jr_description/meshes/: camera_box.stl
seekur_jr_description/meshes/arm/: base.stl  forearm.stl  forearm_n.stl  left_finger_n.stl  right_finger_n.stl  shoulder.stl  shoulder_n.stl  upper_arm.stl  upper_arm_n.stl  wrist_pitch_n.stl  wrist_roll_n.stl
seekur_jr_description/meshes/base/: SeekurJr.stl
seekur_jr_description/robots/: seekur_jr.urdf.xacro  seekur_jr_with_arm.gazebo  seekur_jr_with_arm.urdf.xacro
seekur_jr_description/rviz/: urdf.rviz
seekur_jr_description/urdf/: materials.xacro  seekur_jr.gazebo  seekur_jr.xacro  seekur_jr_original.xacro
seekur_jr_description/urdf/sensors/: sensors.urdf.xacro  sensors.xacro  xtion.xacro
seekur_jr_gazebo/: CMakeLists.txt  package.xml
seekur_jr_gazebo/config/: seekur_control.yaml
seekur_jr_gazebo/launch/: seekur_jr.launch  seekur_jr_arm.launch
seekur_jr_gazebo/worlds/: seekur_jr.world
seekur_jr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
seekur_jr_moveit_config/config/: controllers.yaml  seekur_jr.srdf  xtion.yaml
seekur_jr_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_arm.launch  moveit.rviz  (+12 more)
